Confirm popup alignment affiliate page design changes offerbuy page blog element click issue resolved removed clicking to Tap to prevent auto click on buy now button on offer buy page

--- a/src/pages/affiliate/affiliate.scss
+++ b/src/pages/affiliate/affiliate.scss
@@ -1,4 +1,7 @@
 page-affliate{
+  .m{
+
+  
     .redeemButtonDiv{
   margin-top: 4%;
   margin-bottom: 4%
@@ -280,4 +283,5 @@ overflow: visible;
           animation-direction: alternate;
         }
   }
+}
 }
